switching <p> to list in H1

--- a/H1/rezept.html
+++ b/H1/rezept.html
@@ -6,17 +6,22 @@
     <title>Übung 2</title>
   </head>
   <body>
+   
+
+   
     <h1>Spaghetti alla carbonara</h1>
     <h2>Rezept</h2>
-
-    <p>1 Zwiebel</p>
-    <p>150g Bratspeck in Tranchen oder Pancetta</p>
-    <p>3 dl Rahm</p>
-    <p>4 frische Eier</p>
-    <p>100g geriebener Parmesan</p>
-    <p>wenig Muskat</p>
-    <p>0.25 TL Salz</p>
-    <p>wenig Pfeffer</p>
-    
+    <ul>
+    <ul>
+      <li>1 Zwiebel</li>
+      <li>150g Bratspeck in Tranchen oder Pancetta</li>
+      <li>3 dl Rahm</li>
+      <li>4 frische Eier</li>
+      <li>100g geriebener Parmesan</li>
+      <li>wenig Muskat</li>
+      <li>0.25 TL Salz</li>
+      <li>wenig Pfeffer</li>
+    </ul>
+  </ul>
   </body>
 </html>
