updating rezept page

--- a/H1/rezept.html
+++ b/H1/rezept.html
@@ -12,7 +12,6 @@
     <h1>Spaghetti alla carbonara</h1>
     <h2>Rezept</h2>
     <ul>
-    <ul>
       <li>1 Zwiebel</li>
       <li>150g Bratspeck in Tranchen oder Pancetta</li>
       <li>3 dl Rahm</li>
@@ -21,7 +20,16 @@
       <li>wenig Muskat</li>
       <li>0.25 TL Salz</li>
       <li>wenig Pfeffer</li>
-    </ul>
-  </ul>
+      </ul>
+      <br>
+
+      <h2>Anleitung</h2>
+      <ol>
+      <li>Zwiebel schälen und fein hacken. Bratspeck in Streifen schneiden.</li>
+      <li>Zwiebel und Bratspeck in einer beschichteten Bratpfanne ohne Fettzugabe knusprig braten.</li>
+      <li>Rahm in einer Schüssel mit den Eiern, dem Käse und den Gewürzen verrühren.</li>
+      <li>Spaghetti in reichlich kochendem Salzwasser al dente kochen. Abgiessen, abtropfen lassen und sofort mit der Eimasse mischen.</li>
+      <li>Spaghetti auf vorgewärmten Tellern anrichten und sofort servieren.</li>
+    </ol>
   </body>
 </html>
