Add header to SinglePost.html

--- a/H2/SinglePost.html
+++ b/H2/SinglePost.html
@@ -7,6 +7,22 @@
 </head>
 <body>
    <!-- Single Post -->
+   <header>
+    <div>
+      <img src="logo.png" alt="Logo" />
+    </div>
+    <nav>
+      <ul>
+        <li><a href="#">More</a></li>
+        <li><a href="#">More</a></li>
+        <li><a href="#">More</a></li>
+      </ul>
+    </nav>
+    <div>
+      <input type="text" placeholder="Search" />
+      <button>Search</button>
+    </div>
+  </header>
    <article>
     <h1>Post Title</h1>
     <p>Author | Category | Time</p>
