übung copy cat fertig stellen

--- a/D2/Übung2/index.html
+++ b/D2/Übung2/index.html
@@ -22,6 +22,12 @@
 
     <div class="header">
   <button class="login">SIGN IN</button>
+  <img src="buttons.png" class="dots">
+  <div class="header-content">
+  <p class="abstand">+You</p>
+  <p class="abstand">Gmail</p>
+  <p class="abstand">Images</p>
+</div>
     </div>
       
       <div class= "buttons">  
