--- a/D2/Übung2/index.html
+++ b/D2/Übung2/index.html
@@ -13,8 +13,8 @@
 
     <div class="form">  
         <form>
-            <input class="font-sizze fas fa-microphone" placeholder="Search Google or type URL">
-            <i class="fas fa-microphone"></i>
+            <input class="font-sizze">
+
         </form>
     </div>
       
@@ -35,15 +35,21 @@
         <input type="submit" value="I'm Feeling Lucky" id="im_feeling_lucky">
       </div>
 
-
+      <div class="footercolor"></div>
     
       <footer>
         <hr class="footer">
         <div class="footer-content">
-            <p class="abstand">Advertising Programms</p>
-            <p class="abstand">Business Solutions</p>
-            <p class="abstand">About Google</p>
-            <p class="abstand">Privacy & Terms</p>
+            <div class="footer-left">
+                <p class="abstando">Advertising</p>
+                <p class="abstando">Business</p>
+                <p class="abstando">About</p>
+            </div>
+            <div class="footer-right">
+                <p class="abstand">Privacy</p>
+                <p class="abstand">Terms</p>
+                <p class="abstand">Settings</p>
+            </div>
         </div>
     </footer>
 </body>
