übung 1 d3 fertig machen

--- a/D3/Übung1/index.html
+++ b/D3/Übung1/index.html
@@ -10,7 +10,12 @@
     <h1 class="centermiddle">Car Galery</h1>
 
 <div class="photos">
-    <img class="photos" src="gemera.png">
+    <img  src="gemera.png">
+    <img  src="ghost.png">
+    <img  src="huayra.png">
+    <img  src="jesko.png">
+    <img  src="Regera.png">
+    <img  src="utopia.png">
 </div>
 
 </body>
