Finish Übung 2 from D3

--- a/D3/Übung 2/index.html
+++ b/D3/Übung 2/index.html
@@ -3,15 +3,47 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css"/>
     <title>Übung 2</title>
   </head>
   <body>
     <h1>Mobile Shop</h1>
-    <article>
-        <img class="image" src="iphone6.webp" alt="Iphone 6" />
+    <div class="products">
+      <article>
+        <img class="image" src="iphone6.webp" alt="Iphone 6"/>
         <h2>Iphone 6</h2>
-        <p>300$ | Buy</p>
+        <p>300$ <button>Buy</button></p>
       </article>
+
+      <article>
+        <img class="image" src="iphone8.jpg" alt="Iphone 8"/>
+        <h2>Iphone 8</h2>
+        <p>300$ <button>Buy</button></p>
+      </article>
+
+      <article>
+        <img class="image" src="iphone11.webp" alt="Iphone 11"/>
+        <h2>Iphone 11</h2>
+        <p>300$ <button>Buy</button></p>
+      </article>
+
+      <article>
+        <img class="image" src="iphone12.jpeg" alt="Iphone 12"/>
+        <h2>Iphone 12</h2>
+        <p>300$ <button>Buy</button></p>
+      </article>
+
+      <article>
+        <img class="image" src="iphone14.jpeg" alt="Iphone 14"/>
+        <h2>Iphone 14</h2>
+        <p>300$ <button>Buy</button></p>
+      </article>
+
+      <article>
+        <img class="image" src="iphone14pro.avif" alt="Iphone 14 Pro"/>
+        <h2>Iphone 14 Pro</h2>
+        <p>300$ <button>Buy</button></p>
+      </article>
+    </div>
   </body>
 </html>
