id bei übung 1 h3 zuteilen

--- a/H3/Übung 1/index.html
+++ b/H3/Übung 1/index.html
@@ -10,82 +10,81 @@
     <h1>Lieblingsspiel</h1>
     <p>Welches ist Ihr aktuelles Lieblingsspiel (Computerspiele)?</p>
     
-    <input type="radio" name="spiel">
-    <label>Fortnite</label><br>
+    <input type="radio" id="fortnite" name="spiel">
+    <label for="fortnite">Fortnite</label><br>
 
-    <input type="radio" name="spiel">
-    <label>Minecraft</label><br>
+    <input type="radio" id="minecraft" name="spiel">
+    <label for="minecraft">Minecraft</label><br>
 
-    <input type="radio" name="spiel">
-    <label>League of Legends</label><br>
+    <input type="radio" id="leagueoflegends" name="spiel">
+    <label for="leagueoflegends">League of Legends</label><br>
 
-    <input type="radio" name="spiel">
-    <label>Call of Duty: Warzone</label><br>
+    <input type="radio" id="callofduty" name="spiel">
+    <label for="callofduty">Call of Duty: Warzone</label><br>
 
-    <input type="radio" name="spiel">
-    <label>Roblox</label><br>
+    <input type="radio" id="roblox" name="spiel">
+    <label for="roblox">Roblox</label><br>
 
-    <input type="radio" name="spiel">
-    <label>Genshin Impact</label><br>
+    <input type="radio" id="genshinimpact" name="spiel">
+    <label for="genshinimpact">Genshin Impact</label><br>
 
-    <input type="radio" name="spiel">
-    <label>Valorant</label><br>
+    <input type="radio" id="valorant" name="spiel">
+    <label for="valorant">Valorant</label><br>
 
-    <input type="radio" name="spiel">
-    <label>Grand Theft Auto</label><br>
+    <input type="radio" id="grandtheftauto" name="spiel">
+    <label for="grandtheftauto">Grand Theft Auto</label><br>
 
-    <input type="radio" name="spiel">
-    <label>FC 24</label><br>
+    <input type="radio" id="fc24" name="spiel">
+    <label for="fc24">FC 24</label><br>
 
-    <input type="radio" name="spiel">
-    <label>Overwatch</label><br>
+    <input type="radio" id="overwatch" name="spiel">
+    <label for="overwatch">Overwatch</label><br>
 
-    <input type="radio" name="spiel">
-    <label>Ich spiele keine Spiele</label><br>
+    <input type="radio" id="no-game" name="spiel">
+    <label for="no-game">Ich spiele keine Spiele</label><br>
 
-    <input type="radio" name="spiel">
-    <label>Andere:</label>
+    <input type="radio" id="other-game" name="spiel">
+    <label for="other-game">Andere:</label>
     <input type="text"><br>
 
     <h1>Regelmäßige Spiele</h1>
     <p>Welche der folgenden Spiele spielen Sie regelmässig?</p>
 
-   
-    <input type="checkbox" name="regelmässig">
-    <label>Fortnite</label><br>
+    <input type="checkbox" id="fortnite-regelmässig" name="regelmässig">
+    <label for="fortnite-regelmässig">Fortnite</label><br>
 
-    <input type="checkbox" name="regelmässig">
-    <label>Minecraft</label><br>
+    <input type="checkbox" id="minecraft-regelmässig" name="regelmässig">
+    <label for="minecraft-regelmässig">Minecraft</label><br>
 
-    <input type="checkbox" name="regelmässig">
-    <label>League of Legends</label><br>
+    <input type="checkbox" id="leagueoflegends-regelmässig" name="regelmässig">
+    <label for="leagueoflegends-regelmässig">League of Legends</label><br>
 
-    <input type="checkbox" name="regelmässig">
-    <label>Call of Duty: Warzone</label><br>
+    <input type="checkbox" id="callofduty-regelmässig" name="regelmässig">
+    <label for="callofduty-regelmässig">Call of Duty: Warzone</label><br>
 
-    <input type="checkbox" name="regelmässig">
-    <label>Roblox</label><br>
+    <input type="checkbox" id="roblox-regelmässig" name="regelmässig">
+    <label for="roblox-regelmässig">Roblox</label><br>
 
-    <input type="checkbox" name="regelmässig">
-    <label>Genshin Impact</label><br>
+    <input type="checkbox" id="genshinimpact-regelmässig" name="regelmässig">
+    <label for="genshinimpact-regelmässig">Genshin Impact</label><br>
 
-    <input type="checkbox" name="regelmässig">
-    <label>Valorant</label><br>
+    <input type="checkbox" id="valorant-regelmässig" name="regelmässig">
+    <label for="valorant-regelmässig">Valorant</label><br>
 
-    <input type="checkbox" name="regelmässig">
-    <label>Grand Theft Auto</label><br>
+    <input type="checkbox" id="grandtheftauto-regelmässig" name="regelmässig">
+    <label for="grandtheftauto-regelmässig">Grand Theft Auto</label><br>
 
-    <input type="checkbox" name="regelmässig">
-    <label>FC 24</label><br>
+    <input type="checkbox" id="fc24-regelmässig" name="regelmässig">
+    <label for="fc24-regelmässig">FC 24</label><br>
 
-    <input type="checkbox" name="regelmässig">
-    <label>Overwatch</label><br>
+    <input type="checkbox" id="overwatch-regelmässig" name="regelmässig">
+    <label for="overwatch-regelmässig">Overwatch</label><br>
 
-    <input type="checkbox" name="regelmässig">
-    <label>Ich spiele keine Spiele</label><br>
+    <input type="checkbox" id="no-game-regelmässig" name="regelmässig">
+    <label for="no-game-regelmässig">Ich spiele keine Spiele</label><br>
     
-    <input type="checkbox" name="regelmässig">
-    <label>Andere:</label>
+    <input type="checkbox" id="other-game-regelmässig" name="regelmässig">
+    <label for="other-game-regelmässig">Andere:</label>
     <input type="text"><br>
 
     <input type="submit" value="Absenden">
