changing folder structure

--- a/Project/Code/homepage.html
+++ b/Project/Code/homepage.html
@@ -12,13 +12,14 @@
             <li><a href="home.html">Home</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#">Rent</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="login.html">login</a></li>
         </ul>
     </div>
     
     <div class="main-content">
         <h1>RENT A LUXURY CAR</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis, impedit quo. Officia nisi corrupti iste asperiores accusamus quisquam quod perspiciatis vitae? Esse eum molestiae ab quasi omnis quidem officia eaque.</p>
+        <p>Welcome to Luxury Rentals. Explore our exclusive collection of premium vehicles and experience the pinnacle of sophistication and performance. Discover your dream car with us today.</p>
     </div>
 
     <div class="carousel">
