Creating Log In Page and making the headder sticky

--- a/Project/Code/homepage.html
+++ b/Project/Code/homepage.html
@@ -6,16 +6,18 @@
     <title>Header Example</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<header>
     <div class="header">
         <ul>
-            <li><a href="home.html">Home</a></li>
+            <li><a href="homepage.html">Home</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#">Rent</a></li>
-            <li><a href="contact.html">Contact</a></li>
-            <li><a href="login.html">login</a></li>
+            <li><a href="loginpage.html">login</a></li>
         </ul>
     </div>
+</header>
+<body>
+
     
     <div class="main-content">
         <h1>RENT A LUXURY CAR</h1>
@@ -30,15 +32,16 @@
         </div>
     </div>
 
-    <footer class="footer">
-        <div class="social-media">
-            <p>Follow us on Social media</p>
-            <div class="social-icons">
-                <a href="#"><img src="X.svg" alt="Social Icon"></a>
-                <a href="#"><img src="instagramm.png" alt="Instagram"></a>
-                <a href="#"><img src="facebook.png" alt="Facebook"></a>
-            </div>
-        </div>
-    </footer>
+ 
 </body>
+<footer class="footer">
+    <div class="social-media">
+        <p>Follow us on Social media</p>
+        <div class="social-icons">
+            <a href="#"><img src="X.svg" alt="Social Icon"></a>
+            <a href="#"><img src="instagramm.png" alt="Instagram"></a>
+            <a href="#"><img src="facebook.png" alt="Facebook"></a>
+        </div>
+    </div>
+</footer>
 </html>
