--- a/Project/Code/homepage.html
+++ b/Project/Code/homepage.html
@@ -10,8 +10,8 @@
     <div class="header">
         <ul>
             <li><a href="homepage.html">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Rent</a></li>
+            <li><a href="aboutpage.html">About</a></li>
+            <li><a href="rentpage.html">Rent</a></li>
             <li><a href="loginpage.html">login</a></li>
         </ul>
     </div>
