Creating Rent Page

--- a/Project/Code/homepage.html
+++ b/Project/Code/homepage.html
@@ -28,7 +28,7 @@
         <div class="carousel-inner">
             <img src="regarablackwhite.png" alt="Car Image">
             <img src="koenigseggjesko.jpg" alt="Car Image">
-            <img src="blacknightedition.png" alt="Car Image">
+            <img src="rollsroyce.jpg" alt="Car Image">
         </div>
     </div>
 
