--- a/Project/Code/aboutpage.html
+++ b/Project/Code/aboutpage.html
@@ -1,60 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Header Example</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About Us</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<header>
   <div class="header">
-    <ul>
-      <li><a href="home.html">Home</a></li>
-      <li><a href="aboutpage.html">About</a></li>
-      <li><a href="rentpage.html">Rent</a></li>
-      <li><a href="contact.html">Contact</a></li>
-      <li><a href="login.html">login</a></li>
-    </ul>
+      <ul>
+          <li><a href="homepage.html">Home</a></li>
+          <li><a href="aboutpage.html">About</a></li>
+          <li><a href="rentpage.html">Rent</a></li>
+          <li><a href="loginpage.html">login</a></li>
+      </ul>
   </div>
+</header>
+<body>
 
-  <body>
+    </div>
+
     <div class="main-content">
-      <h1>ABOUT US</h1>
+        <h1>ABOUT US</h1>
     </div>
 
     <div class="image-grid">
-      <div class="image-container">
-        <img
-          src="AndrinRamon_Rueegg.jpg"
-          alt="AndrinRamon_Rueegg"
-          style="width: 400px; height: 400px"
-        />
-        <p>
-          Andrin Ramon Rüegg <br />
-          Software developer
-        </p>
-      </div>
-      <div class="image-container">
-        <img
-          src="Maximilian_Noethe.jpg"
-          alt="Maximilian_Noethe"
-          style="width: 400px; height: 400px"
-        />
-        <p>
-          Maximilian Nöthe <br />
-          Software developer
-        </p>
-      </div>
+        <div class="image-container">
+            <img src="AndrinRamon_Rueegg.jpg" alt="AndrinRamon_Rueegg">
+            <p>Andrin Ramon Rüegg <br> Software Developer</p>
+        </div>
+        <div class="image-container">
+            <img src="Maximilian_Noethe.jpg" alt="Maximilian_Noethe">
+            <p>Maximilian Nöthe <br> Software Developer</p>
+        </div>
     </div>
-  </body>
 
-  <footer class="footer">
-    <div class="social-media">
-      <p>Follow us on Social media</p>
-      <div class="social-icons">
-        <a href="#"><img src="X.svg" alt="Social Icon" /></a>
-        <a href="#"><img src="instagramm.png" alt="Instagram" /></a>
-        <a href="#"><img src="facebook.png" alt="Facebook" /></a>
-      </div>
-    </div>
-  </footer>
+    <footer class="footer">
+        <div class="social-media">
+            <p>Follow us on Social media</p>
+            <div class="social-icons">
+                <a href="#"><img src="X.svg" alt="Social Icon"></a>
+                <a href="#"><img src="instagramm.png" alt="Instagram"></a>
+                <a href="#"><img src="facebook.png" alt="Facebook"></a>
+            </div>
+        </div>
+    </footer>
+</body>
 </html>
