--- a/Project/Code/loginpage.html
+++ b/Project/Code/loginpage.html
@@ -6,16 +6,18 @@
     <title>Login Page</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<header>
     <div class="header">
     <ul>
         <li><a href="homepage.html">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Rent</a></li>
-        <li><a href="contactpage.html">Contact</a></li>
+        <li><a href="aboutpage.html">About</a></li>
+        <li><a href="rentpage.html">Rent</a></li>
         <li><a href="loginpage.html">login</a></li>
     </ul>
 </div>
+</header>
+<body>
+
     <div class="login-container">
         <div class="login-box">
             <h2>Login</h2>
