Update website name in homepage

--- a/Project/Code/homepage.html
+++ b/Project/Code/homepage.html
@@ -20,7 +20,7 @@
 
     
     <div class="main-content">
-        <h1>RENT A LUXURY CAR</h1>
+        <h1>DELUXE DRIVES</h1>
         <p>Welcome to Luxury Rentals. Explore our exclusive collection of premium vehicles and experience the pinnacle of sophistication and performance. Discover your dream car with us today.</p>
     </div>
 
