Translate labe from german to english

--- a/Project/Code/register.html
+++ b/Project/Code/register.html
@@ -72,7 +72,7 @@
                 </div>
                 <div class="input-group">
                     <input type="checkbox" id="datenschutz" name="datenschutz" required>
-                    <label for="datenschutz">I accept the privacy policy</label>
+                    <label for="privacy-policy">I accept the privacy policy</label>
                 </div>
                 <button type="submit">Register</button>
             </form>
