Update file name to detail_car1 and implement cardata

--- a/Project/Code/detail_car1.html
+++ b/Project/Code/detail_car1.html
@@ -19,21 +19,32 @@
   </header>
   <body>
     <div class="main-content">
-        <h1>KÖNIGSEGG JESKO</h1>
-        <p>Here is all the information you need to decide whether or not to rent this car.</p>
+      <h1>KÖNIGSEGG JESKO</h1>
+      <p>
+        Here is all the information you need to decide whether or not to rent
+        this car.
+      </p>
     </div>
 
     <div class="car-details">
-        <div class="car-image">
-            <img src="koenigseggjesko.jpg" alt="Car Image" />
-        </div>
-        <div class="car-info">
-            <p>Car data</p>
-            <button class="rent-button">RENT</button>
-            
-        </div>
+      <div class="car-image">
+        <img src="koenigseggjesko.jpg" alt="Car Image" />
+      </div>
+      <div class="car-info">
+        <ul>
+          <li>Brand: Koenigsegg</li>
+          <br>
+          <li>Top Speed: 484 km/h</li>
+          <br>
+          <li>Rent per Hour: $1'200</li>
+          <br>
+          <li>Seat Count: 2</li>
+          <br>
+          <li>Description: The Koenigsegg Jesko is a hypercar designed for speed and precision. With its twin-turbo V8 engine producing over 1,600 horsepower, advanced aerodynamics, and lightweight carbon fiber construction, it offers unparalleled performance on both road and track.</li>
+        </ul>
+        <button class="rent-button">RENT</button>
+      </div>
     </div>
-
   </body>
   <footer class="footer">
     <div class="social-media">
