Making the Links in the header responsive

--- a/Project/Code/homepage.html
+++ b/Project/Code/homepage.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Header Example</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/png" href="jeskoicon.png">
 </head>
+
 <header>
     <div class="header">
         <ul>
