--- a/Project/Code/loginpage.html
+++ b/Project/Code/loginpage.html
@@ -12,7 +12,7 @@
         <li><a href="homepage.html">Home</a></li>
         <li><a href="aboutpage.html">About</a></li>
         <li><a href="rentpage.html">Rent</a></li>
-        <li><a href="loginpage.html">login</a></li>
+        <li><a href="loginpage.html">Login</a></li>
         <li><a href="register.html">Register</a></li>
     </ul>
 </div>
