Update login page

--- a/Project/Code/loginpage.html
+++ b/Project/Code/loginpage.html
@@ -22,7 +22,7 @@
     <div class="login-container">
         <div class="login-box">
             <h2>Login</h2>
-            <form>
+            <form action="homepage.html" method="get">
                 <div class="input-group">
                     <label for="username">Username</label>
                     <input type="text" id="username" name="username" required>
@@ -33,6 +33,7 @@
                 </div>
                 <button type="submit">Login</button>
             </form>
+            <a href="forgotpassword.html">Forgot Password</a>
         </div>
     </div>
 </body>
