--- a/Project/Code/successful_password_reset.html
+++ b/Project/Code/successful_password_reset.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login Page</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<header>
-    
-</header>
-<body>
-
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <header></header>
+  <body>
     <div class="login-container">
+      <form action="loginpage.html" method="get">
         <div class="login-box">
-            <h2>PASSWORD SUCCESSFULLY RESET</h2>
-            <h3>An email has been sent to you, use that to reset your password</h3>
+          <h2>PASSWORD SUCCESSFULLY RESET</h2>
+          <h3>
+            An email has been sent to you, use that to reset your password
+          </h3>
         </div>
+        <button type="submit">Back to Login</button>
+      </form>
     </div>
-</body>
+  </body>
 </html>
