Update car name

--- a/Project/Code/detail_car2.html
+++ b/Project/Code/detail_car2.html
@@ -19,7 +19,7 @@
   </header>
   <body>
     <div class="main-content">
-      <h1>KÖNIGSEGG JESKO</h1>
+      <h1>KÖNIGSEGG REGERA</h1>
       <p>
         Here is all the information you need to decide whether or not to rent
         this car.
