--- a/Project/Code/loginpage.html
+++ b/Project/Code/loginpage.html
@@ -33,7 +33,9 @@
                 </div>
                 <button type="submit">Login</button>
             </form>
+            <div class="forgot-password">
             <a href="forgotpassword.html">Forgot Password</a>
+        </div>
         </div>
     </div>
 </body>
