--- a/Project/Code/rentpage.html
+++ b/Project/Code/rentpage.html
@@ -1,77 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rent Page</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<header>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <header>
     <div class="header">
-        <ul>
-            <li><a href="homepage.html">Home</a></li>
-            <li><a href="aboutpage.html">About</a></li>
-            <li><a href="rentpage.html">Rent</a></li>
-            <li><a href="loginpage.html">Login</a></li>
-            <li><a href="register.html">Register</a></li>
-        </ul>
+      <ul>
+        <li><a href="homepage.html">Home</a></li>
+        <li><a href="aboutpage.html">About</a></li>
+        <li><a href="rentpage.html">Rent</a></li>
+        <li><a href="loginpage.html">Login</a></li>
+        <li><a href="register.html">Register</a></li>
+      </ul>
     </div>
-</header>
-<body>
-
-    
+  </header>
+  <body>
     <div class="main-content">
-        <h1>RENT A LUXURY CAR</h1>
-      </div>
+      <h1>RENT A LUXURY CAR</h1>
+    </div>
 
     <div class="car-cards-container">
-        <div class="car-card">
-            <img src="koenigseggjesko.jpg" alt="Car 1">
-            <h3>Koenigsegg Jesko</h3>
-        </div>
-        <div class="car-card">
-            <img src="Regera.png" alt="Car 2">
-            <h3>Koeigsegg Regera</h3>
-        </div>
-        <div class="car-card">
-            <img src="lambohuracan.png" alt="Car 3">
-            <h3>Lamborghini Huracan</h3>
-        </div>
-        <div class="car-card">
-            <img src="ferrari488GTB.png" alt="Car 4">
-            <h3>Ferrari 488 GTB</h3>
-        </div>
-        <div class="car-card">
-            <img src="rollsroycephantom.png" alt="Car 5">
-            <h3>Car Model 5</h3>
-        </div>
-        <div class="car-card">
-            <img src="MercedesBenzSClass.png" alt="Car 6">
-            <h3>Mercedes-Benz S-Class</h3>
-        </div>
-        <div class="car-card">
-            <img src="Porsche718CaymanGT4RS.png" alt="Car 7">
-            <h3>Porsche 718 Cayman GT4 RS</h3>
-        </div>
-        <div class="car-card">
-            <img src="PaganiHuayraBC.png" alt="Car 8">
-            <h3>Pagani Huayra BC</h3>
-        </div>
-        <div class="car-card">
-            <img src="AstonMartinDB11.png" alt="Car 9">
-            <h3>Aston Martin DB11</h3>
-        </div>
+      <div class="car-card">
+        <a href="detail_car1.html">
+          <img src="koenigseggjesko.jpg" alt="Car 1" />
+        </a>
+        <h3>Koenigsegg Jesko</h3>
+      </div>
+      <div class="car-card">
+        <a href="detail_car2.html">
+          <img src="Regera.png" alt="Car 2" />
+        </a>
+        <h3>Koenigsegg Regera</h3>
+      </div>
+      <div class="car-card">
+        <a href="detail_car3.html">
+          <img src="lambohuracan.png" alt="Car 3" />
+        </a>
+        <h3>Lamborghini Huracan</h3>
+      </div>
+      <div class="car-card">
+        <a href="detail_car4.html">
+          <img src="ferrari488GTB.png" alt="Car 4" />
+        </a>
+        <h3>Ferrari 488 GTB</h3>
+      </div>
+      <div class="car-card">
+        <a href="detail_car5.html">
+          <img src="rollsroycephantom.png" alt="Car 5" />
+        </a>
+        <h3>Car Model 5</h3>
+      </div>
+      <div class="car-card">
+        <a href="detail_car6.html">
+          <img src="MercedesBenzSClass.png" alt="Car 6" />
+        </a>
+        <h3>Mercedes-Benz S-Class</h3>
+      </div>
+      <div class="car-card">
+        <a href="detail_car7.html">
+          <img src="Porsche718CaymanGT4RS.png" alt="Car 7" />
+        </a>
+        <h3>Porsche 718 Cayman GT4 RS</h3>
+      </div>
+      <div class="car-card">
+        <a href="detail_car9.html">
+          <img src="PaganiHuayraBC.png" alt="Car 8" />
+        </a>
+        <h3>Pagani Huayra BC</h3>
+      </div>
+      <div class="car-card">
+        <a href="detail_car8.html">
+          <img src="AstonMartinDB11.png" alt="Car 9" />
+        </a>
+        <h3>Aston Martin DB11</h3>
+      </div>
     </div>
 
     <footer class="footer">
-        <div class="social-media">
-            <p>Follow us on Social media</p>
-            <div class="social-icons">
-                <a href="#"><img src="X.svg" alt="Social Icon"></a>
-                <a href="#"><img src="instagramm.png" alt="Instagram"></a>
-                <a href="#"><img src="facebook.png" alt="Facebook"></a>
-            </div>
+      <div class="social-media">
+        <p>Follow us on Social media</p>
+        <div class="social-icons">
+          <a href="#"><img src="X.svg" alt="Social Icon" /></a>
+          <a href="#"><img src="instagramm.png" alt="Instagram" /></a>
+          <a href="#"><img src="facebook.png" alt="Facebook" /></a>
         </div>
+      </div>
     </footer>
-</body>
+  </body>
 </html>
