Fixxing a lot of responsive problems

--- a/Project/Code/loginpage.html
+++ b/Project/Code/loginpage.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/png" href="jeskoicon.png">
 </head>
 <header>
     <div class="header">
@@ -31,7 +32,7 @@
                     <label for="password">Password</label>
                     <input type="password" id="password" name="password" required>
                 </div>
-                <button type="submit">Login</button>
+                <button class="registerbutton" type="submit">Login</button>
             </form>
         </div>
     </div>
