--- a/Project/Code/aboutpage.html
+++ b/Project/Code/aboutpage.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/png" href="jeskoicon.png">
 </head>
 <header>
   <div class="header">
