Add action and method to get linked to login page

--- a/Project/Code/register.html
+++ b/Project/Code/register.html
@@ -23,7 +23,7 @@
     <div class="register-container">
         <div class="register-box">
             <h2>Please Register</h2>
-            <form>
+            <form action="loginpage.html" method="get">
                 <div class="register-input-group">
                     <label for="gender-m">Male</label>
                     <input type="radio" id="gender-m" name="gender" value="m" required>
