--- a/Project/Code/loginpage.html
+++ b/Project/Code/loginpage.html
@@ -32,7 +32,7 @@
                     <label for="password">Password</label>
                     <input type="password" id="password" name="password" required>
                 </div>
-                <button class="registerbutton" type="submit">Login</button>
+                <button class="loginbutton" type="submit">Login</button>
             </form>
             <div class="forgot-password">
             <a href="forgotpassword.html">Forgot Password</a>
