Delete files and update homepage.html to index.html

--- a/Project/Code/detail_car9.html
+++ b/Project/Code/detail_car9.html
@@ -9,7 +9,7 @@
   <header>
     <div class="header">
       <ul>
-        <li><a href="homepage.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="aboutpage.html">About</a></li>
         <li><a href="rentpage.html">Rent</a></li>
         <li><a href="loginpageca  .html">Login</a></li>
