--- a/Project/Code/loginpage.html
+++ b/Project/Code/loginpage.html
@@ -10,7 +10,7 @@
 <header>
     <div class="header">
     <ul>
-        <li><a href="homepage.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="aboutpage.html">About</a></li>
         <li><a href="rentpage.html">Rent</a></li>
         <li><a href="loginpage.html">Login</a></li>
@@ -23,7 +23,7 @@
     <div class="login-container">
         <div class="login-box">
             <h2>Login</h2>
-            <form action="homepage.html" method="get">
+            <form action="index.html" method="get">
                 <div class="input-group">
                     <label for="username">Username</label>
                     <input type="text" id="username" name="username" required>
