--- a/successful_password_reset.html
+++ b/successful_password_reset.html
@@ -15,8 +15,9 @@
           <h3>
             An email has been sent to you, use that to reset your password
           </h3>
+          <br>
+          <button class="loginbutton" type="submit">Back To Login</button>
         </div>
-        <button type="submit">Back to Login</button>
       </form>
     </div>
   </body>
