Fixxing responsiveness on detail pages

--- a/aboutpage.html
+++ b/aboutpage.html
@@ -28,7 +28,7 @@
 
     <div class="image-grid">
         <div class="image-container">
-            <img src="AndrinRamon_Rueegg.jpg" alt="AndrinRamon_Rueegg">
+            <img class="testtesttest" src="AndrinRamon_Rueegg.jpg" alt="AndrinRamon_Rueegg">
             <p>Andrin Ramon Rüegg <br> Software Developer</p>
         </div>
         <div class="image-container">
