--- a/register.html
+++ b/register.html
@@ -36,7 +36,7 @@
                 </div>
                 <div class="register-input-row">
                     <div class="register-input-group">
-                        <label for="first-name">First name</label>
+                        <label class="lastnamee" for="first-name">First name</label>
                         <input type="text" id="first-name" name="first-name" required>
                     </div>
                     <div class="register-input-group">
@@ -77,7 +77,7 @@
                 </div>
             </div>
                 <div class="register-input-group register-input-group-checkbox">
-                    <label for="privacy-policy">I accept the privacy policy</label>
+                    <label class="privacy" for="privacy-policy">I accept the privacy policy</label>
                     <input type="checkbox" id="privacy-policy" name="privacy-policy" required>
                 </div>
                 <button class="register-button" type="submit">Register</button>
