Creating responsive video with sound

--- a/aboutpage.html
+++ b/aboutpage.html
@@ -35,6 +35,10 @@
             <img src="Maximilian_Noethe.jpg" alt="Maximilian_Noethe">
             <p>Maximilian Nöthe <br> Software Developer</p>
         </div>
+
+        <div class="video-container">
+            <video src="car.mp4" controls></video>
+        </div>
     </div>
 
     <footer class="footer">
