Fixxing register responsiveness uploading responsive advertisment video and making car details responsive

--- a/aboutpage.html
+++ b/aboutpage.html
@@ -37,7 +37,7 @@
         </div>
 
         <div class="video-container">
-            <video src="car.mp4" controls></video>
+            <video src="advertisment.mp4" controls></video>
         </div>
     </div>
 
